<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="click_me">Click Me</string>
    <string name="google_sign_in">Sign In With Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_new_note">CREATE NEW NOTE</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="description">Description</string>
    <string name="notes_app">Notes App</string>
    <string name="username">UserName</string>
    <string name="user_name">User Name</string>
    <string name="profile_name">UserName:</string>
    <string name="not_provided">Not provided</string>
    <string name="useremail">UserEmail:</string>
    <string name="email">Email</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="welcome_to_notes_app">Welcome to</string>
    <string name="app_logo">app logo</string>
</resources>