<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".fragments.AddNoteFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/create_new_note"
        android:focusable="true"
        android:src="@drawable/baseline_done_24"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/addNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:textColor="@color/light_purple"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/montserrat_alternates"
        android:textStyle="bold"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:autofillHints="true"
        android:layout_below="@+id/addNoteText"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true"
        android:autofillHints="true"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat_alternates_light"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textSize="16sp" />
</RelativeLayout>